--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nodegps",
+  "name": "node-gps",
   "version": "0.0.1",
-  "description": "Read GPS in Node",
+  "description": "Read from Adafuit GPS in Node",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository":"https://github.com/sumitkm/nodegps.git",
+  "repository": "https://github.com/sumitkm/nodegps.git",
   "keywords": [
     "node",
     "raspberrypi",
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "http": "0.0.0",
+    "node-gps-parser": "0.0.4",
     "serialport": "../node-serialport",
     "socket.io": "^1.4.5"
   }
